// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SalesFloorTabScreen Renders the SalesFloorTabScreen Component 1`] = `
<View>
  <FlatList
    data={
      Array [
        "Front",
        "ABAR",
        "BREW",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[MockFunction]}
    refreshing={false}
    renderItem={[Function]}
  />
</View>
`;

exports[`SalesFloorTabScreen Renders the SalesFloorTabScreen Component while refreshing 1`] = `
<View>
  <FlatList
    data={
      Array [
        "Front",
        "ABAR",
        "BREW",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[MockFunction]}
    refreshing={true}
    renderItem={[Function]}
  />
</View>
`;
